--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script>
-      window.location.replace('http://thaiastro.nectec.or.th');
+      window.location.replace('https://youtu.be/XHPndvbrzVA');
     </script>
   </head>
   <body></body>
